[gd_scene load_steps=13 format=2]

[ext_resource path="res://DialogBox.gd" type="Script" id=1]
[ext_resource path="res://effects/Dialog.Typing.ogg" type="AudioStream" id=2]
[ext_resource path="res://fonts/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/LibreBaskerville-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/LibreBaskerville-Italic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]

size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="KeypressNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -14.136

[node name="DialogTextLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="LetterTimer" type="Timer" parent="DialogTextLabel"]
wait_time = 0.02

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.5
margin_top = -150.0
margin_right = 424.5
margin_bottom = 150.0
color = Color( 0, 0, 0, 0.501961 )

[node name="DialogTextBox" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.0
margin_top = -83.0
margin_right = 337.0
margin_bottom = 83.0
theme = SubResource( 2 )
custom_fonts/mono_font = SubResource( 3 )
custom_fonts/bold_italics_font = SubResource( 4 )
custom_fonts/italics_font = SubResource( 5 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true

[connection signal="timeout" from="DialogTextLabel/LetterTimer" to="." method="_on_LetterTimer_timeout"]
